--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,16 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@icon-park/vue-next": "^1.4.2",
+    "crypto-js": "^4.1.1",
+    "prismjs": "^1.29.0",
+    "sass": "^1.63.4",
+    "showdown": "^2.1.0",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
