--- a/serv/.gitignore
+++ b/serv/.gitignore
@@ -1,35 +1,28 @@
-# compiled output
-/dist
-/node_modules
-
 # Logs
 logs
 *.log
 npm-debug.log*
-pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 lerna-debug.log*
 
-# OS
+node_modules
 .DS_Store
+dist
+dist-ssr
+coverage
+*.local
 
-# Tests
-/coverage
-/.nyc_output
+/cypress/videos/
+/cypress/screenshots/
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
+# Editor directories and files
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
 !.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
